# Bosch_VTA_Agent

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/routers/: auth.py  chat.py  documents.py
app/utils/: batch_upload.py  helpers.py  mongodb.py  rag.py  schema.py
